horizontal scroll fixed

--- a/styles/_left-side.scss
+++ b/styles/_left-side.scss
@@ -22,16 +22,21 @@
         padding: 24px;
         margin: 0;
 
+        img {
+            display: inline;
+            height: 100%;
+        }
+
         @media (max-width:$mobile-width) {
             padding: 4px;
             margin: 0;
             top: 0;
             flex-direction: row;
-            justify-content: center;
+            justify-content: space-evenly;
 
             img {
                 display: inline;
-                height: 50px;
+                height: 36px;
             }
         }
 
@@ -39,8 +44,7 @@
             text-align: center;
 
             @media (max-width:$mobile-width) {
-                margin-left: 48px;
-
+                font-size: large;
             }
         }
 
@@ -57,10 +61,12 @@
         box-sizing: border-box;
         overflow: hidden;
         overflow-y: scroll;
+        scrollbar-width: none;
 
         @media (max-width:$mobile-width) {
+            width: 100%;
             flex-direction: row;
-            overflow: hidden;
+            overflow: scroll;
             height: auto;
             padding-top: 10px;
         }
